PQJiraInt1/src/objects/JIRACXIssueComment__c.object
<CustomObject>
    <description>Comments recorded in JIRA for an issue</description>
    <fields>
        <fullName>Author__c</fullName>
        <description>JIRA comment author</description>
        <inlineHelpText>JIRA comment author</inlineHelpText>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRACreatedDate__c</fullName>
        <description>JIRA comment creation date</description>
        <inlineHelpText>JIRA comment creation date</inlineHelpText>
        <label>JIRACreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JIRAID__c</fullName>
        <description>JIRA ID for the comment</description>
        <externalId>true</externalId>
        <inlineHelpText>JIRA ID for the comment</inlineHelpText>
        <label>JIRAID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JIRAIssueID__c</fullName>
        <description>JIRA ID for the parent Issue</description>
        <inlineHelpText>JIRA ID for the parent Issue</inlineHelpText>
        <label>JIRAIssueID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRAIssue__c</fullName>
        <label>JIRACXIssue</label>
        <referenceTo>JIRACXIssue__c</referenceTo>
        <relationshipLabel>JIRACXIssueComments</relationshipLabel>
        <relationshipName>JIRACXIssueComments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>JIRAKey__c</fullName>
        <description>External JIRA key for the issue owning this comment</description>
        <inlineHelpText>External JIRA key for the issue owning this comment</inlineHelpText>
        <label>JIRAKey</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRAUpdateDate__c</fullName>
        <description>JIRA comment update date</description>
        <inlineHelpText>JIRA comment update date</inlineHelpText>
        <label>JIRAUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdateAuthor__c</fullName>
        <description>JIRA comment update author</description>
        <inlineHelpText>JIRA comment update author</inlineHelpText>
        <label>UpdateAuthor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>body__c</fullName>
        <description>JIRA Comment string</description>
        <inlineHelpText>JIRA comment string</inlineHelpText>
        <label>body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>JIRACXIssueComment</label>
    <nameField>
        <label>JIRACXIssueComment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIRACXIssueComments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>